--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -85,7 +85,7 @@
           <span>
             <img src="assets/images/sell.svg" class="img-sell" alt="sell" width="13.49" />
           </span>
-          <span class="label-sell">SELL</span>
+          <span class="label-sell">SELL1</span>
         </button>
       </div>
       <div *ngIf="user" class="col-md-auto col-lg-auto col-xl-auto nav-item pt-3 profilep profile-image-section">
